Fixed flexbox alignment in body 1 Added div tags to header and subtext to fix alignment issues

--- a/style.css
+++ b/style.css
@@ -57,12 +57,21 @@ body {
     background-color: #1F2937;
     display: flex;
     justify-content: center;
-    gap: 18px;
 }
 
 .lbody1, .rbody1 {
     width: 40%;
     /*border: 10px solid white;*/
+}
+
+.lbody1{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0px;
+
 }
 
 .maintext {
